// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplitButton renders correctly with SplitButtonMenu 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with custom menu 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with disabled 1`] = `
<div
  className="button kindPrimary colorPrimary disabled"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={true}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation disabled"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    tabIndex={-1}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={true}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding disabled"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with left icon 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="icon noFocusStyle"
      data-testid="icon"
      fill="currentColor"
      height="20"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="20"
    >
      <path
        clipRule="evenodd"
        d="M8.30035 1.86462C7.77994 1.86462 7.29477 2.08976 6.94732 2.46719C6.60179 2.84253 6.41724 3.33927 6.41724 3.84552V4.32642H4.901H2.63477C2.22055 4.32642 1.88477 4.6622 1.88477 5.07642C1.88477 5.49063 2.22055 5.82642 2.63477 5.82642H4.151V16.1545C4.151 16.6608 4.33556 17.1575 4.68109 17.5328C5.02853 17.9103 5.51371 18.1354 6.03411 18.1354H13.9659C14.4863 18.1354 14.9715 17.9103 15.3189 17.5328C15.6645 17.1575 15.849 16.6608 15.849 16.1545V5.82642H17.3652C17.7794 5.82642 18.1152 5.49063 18.1152 5.07642C18.1152 4.6622 17.7794 4.32642 17.3652 4.32642H15.099H13.5828V3.84552C13.5828 3.33927 13.3982 2.84253 13.0527 2.46719C12.7053 2.08976 12.2201 1.86462 11.6997 1.86462H8.30035ZM7.16447 5.82642C7.16539 5.82642 7.16631 5.82642 7.16724 5.82642H12.8328C12.8337 5.82642 12.8346 5.82642 12.8356 5.82642H14.349V16.1545C14.349 16.3012 14.2948 16.4306 14.2153 16.5169C14.1378 16.6012 14.0465 16.6354 13.9659 16.6354H6.03411C5.95348 16.6354 5.86223 16.6012 5.78468 16.5169C5.7052 16.4306 5.651 16.3012 5.651 16.1545V5.82642H7.16447ZM12.0828 4.32642V3.84552C12.0828 3.69887 12.0286 3.56943 11.9491 3.4831C11.8716 3.39886 11.7803 3.36462 11.6997 3.36462H8.30035C8.21972 3.36462 8.12847 3.39886 8.05091 3.4831C7.97144 3.56943 7.91724 3.69887 7.91724 3.84552V4.32642L12.0828 4.32642Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with medium dialog padding size 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with only required props 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with right icon 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="icon noFocusStyle"
      data-testid="icon"
      fill="currentColor"
      height="20"
      onClick={[Function]}
      viewBox="0 0 20 20"
      width="20"
    >
      <path
        clipRule="evenodd"
        d="M8.30035 1.86462C7.77994 1.86462 7.29477 2.08976 6.94732 2.46719C6.60179 2.84253 6.41724 3.33927 6.41724 3.84552V4.32642H4.901H2.63477C2.22055 4.32642 1.88477 4.6622 1.88477 5.07642C1.88477 5.49063 2.22055 5.82642 2.63477 5.82642H4.151V16.1545C4.151 16.6608 4.33556 17.1575 4.68109 17.5328C5.02853 17.9103 5.51371 18.1354 6.03411 18.1354H13.9659C14.4863 18.1354 14.9715 17.9103 15.3189 17.5328C15.6645 17.1575 15.849 16.6608 15.849 16.1545V5.82642H17.3652C17.7794 5.82642 18.1152 5.49063 18.1152 5.07642C18.1152 4.6622 17.7794 4.32642 17.3652 4.32642H15.099H13.5828V3.84552C13.5828 3.33927 13.3982 2.84253 13.0527 2.46719C12.7053 2.08976 12.2201 1.86462 11.6997 1.86462H8.30035ZM7.16447 5.82642C7.16539 5.82642 7.16631 5.82642 7.16724 5.82642H12.8328C12.8337 5.82642 12.8346 5.82642 12.8356 5.82642H14.349V16.1545C14.349 16.3012 14.2948 16.4306 14.2153 16.5169C14.1378 16.6012 14.0465 16.6354 13.9659 16.6354H6.03411C5.95348 16.6354 5.86223 16.6012 5.78468 16.5169C5.7052 16.4306 5.651 16.3012 5.651 16.1545V5.82642H7.16447ZM12.0828 4.32642V3.84552C12.0828 3.69887 12.0286 3.56943 11.9491 3.4831C11.8716 3.39886 11.7803 3.36462 11.6997 3.36462H8.30035C8.21972 3.36462 8.12847 3.39886 8.05091 3.4831C7.97144 3.56943 7.91724 3.69887 7.91724 3.84552V4.32642L12.0828 4.32642Z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </button>
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with secondary position 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with tertiary button 1`] = `
<div
  className="button kindTertiary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindTertiary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindTertiary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;

exports[`SplitButton renders correctly with zIndex 1`] = `
<div
  className="button kindPrimary colorPrimary"
  data-testid="split-button"
>
  <button
    aria-busy={false}
    aria-disabled={false}
    className="mainButton button sizeMedium kindPrimary colorPrimary rightFlat preventClickAnimation"
    data-testid="split-button-primary-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  />
  <div
    className="secondaryButtonWrapper"
  >
    <span
      className=""
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-busy={false}
        aria-disabled={false}
        aria-expanded={false}
        aria-haspopup={true}
        aria-label="additional actions"
        className="secondaryButton button sizeMedium kindPrimary colorPrimary leftFlat preventClickAnimation noSidePadding"
        data-testid="split-button-secondary-button"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <div
          className="secondaryButtonIconWrapper"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              clipRule="evenodd"
              d="M10.5303 12.5303L10 12L9.46967 12.5303C9.76256 12.8232 10.2374 12.8232 10.5303 12.5303ZM10 10.9393L6.53033 7.46967C6.23744 7.17678 5.76256 7.17678 5.46967 7.46967C5.17678 7.76256 5.17678 8.23744 5.46967 8.53033L9.46967 12.5303L10 12L10.5303 12.5303L14.5303 8.53033C14.8232 8.23744 14.8232 7.76256 14.5303 7.46967C14.2374 7.17678 13.7626 7.17678 13.4697 7.46967L10 10.9393Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </button>
    </span>
  </div>
</div>
`;
